test install packages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ jobs:
   glibc:
     runs-on: ubuntu-latest
     env:
-      GLIBC_VER: 2.31
-      PREFIX_DIR: /usr/glibc-compat
+      GLIBC_VER: '2.31'
+      PREFIX_DIR: '/usr/glibc-compat'
     steps:
       - name: clone
         uses: actions/checkout@master
       - name: update and install packages
         run: |
-          apt-get -q update
+        apt-get -qy install bison
