--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   glibc:
     runs-on: ubuntu-latest
+    container: ubuntu:latest
     env:
       GLIBC_VER: '2.31'
       PREFIX_DIR: '/usr/glibc-compat'
