--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
       - name: update and install packages
         shell: bash
         run: |
-          apt update
+          apt-get update
+          apt-get -y install bison
