--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - name: clone
         uses: actions/checkout@master
       - name: start build.sh
+        shell: bash
         run: |
           pwd
           ls -al
