--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   glibc-builder:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     container:
       image: ubuntu:latest
       env:
@@ -17,16 +20,12 @@ jobs:
       - name: clone
         uses: actions/checkout@master
       - name: update container
-        shell: bash
         run: apt-get update
       - name: install packages
-        shell: bash
         run: apt-get -y install build-essential wget gawk bison python3 gettext texinfo
-      - name: echo pwd
-        shell: bash
-        run: echo "$GITHUB_WORKSPACE"
-#      - name: start build
-#        shell: bash
-#        run: |
-#          chmod 755 build.sh
-#          ./build.sh
+      - name: start build
+        run: |
+          chmod 755 build.sh
+          ./build.sh
+      - name: echo
+        run: ls -al
