--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
       - name: upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: glibc-bin-${{ GLIBC_VER }}.tar.gz
+          name: glibc-bin-${GLIBC_VER}.tar.gz
