--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,8 @@ jobs:
         run: |
           sed 's|<PREFIX_DIR>|${{ env.GLIBC_VER }}|g' ${{ github.workspace }}/glibc-bin.trigger
           sed 's|<PREFIX_DIR>|${{ env.GLIBC_VER }}|g' ${{ github.workspace }}/ld.so.conf
+          echo -e "\nsha512sums=\"$(sha512sum ${{ github.workspace }}/glibc-bin-${{ env.GLIBC_VER }}.tar.gz \
+            ${{ github.workspace }}/nsswitch.conf ${{ github.workspace }}/ld.so.conf)\"" >> ${{ github.workspace }}/APKBUILD
       - name: start build
         uses: triptixx/action-alpine-abuild@master
         with:
