--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
           name: glibc-bin-${{ env.GLIBC_VER }}
       - name: sed PREFIX_DIR
         run: |
-          sed -i 's|<PREFIX_DIR>|${{ env.GLIBC_VER }}|g' ${{ github.workspace }}/glibc-bin.trigger
-          sed -i 's|<PREFIX_DIR>|${{ env.GLIBC_VER }}|g' ${{ github.workspace }}/ld.so.conf
-          echo -e "\nsha512sums=\"$(sha512sum ${{ github.workspace }}/glibc-bin-${{ env.GLIBC_VER }}.tar.gz \
+          sed -i 's|<PREFIX_DIR>|${{ env.PREFIX_DIR }}|g' ${{ github.workspace }}/glibc-bin.trigger
+          sed -i 's|<PREFIX_DIR>|${{ env.PREFIX_DIR }}|g' ${{ github.workspace }}/ld.so.conf
+          echo -e "\n\nsha512sums=\"$(sha512sum ${{ github.workspace }}/glibc-bin-${{ env.GLIBC_VER }}.tar.gz \
             ${{ github.workspace }}/nsswitch.conf ${{ github.workspace }}/ld.so.conf)\"" >> ${{ github.workspace }}/APKBUILD
           cat ${{ github.workspace }}/glibc-bin.trigger
           cat ${{ github.workspace }}/ld.so.conf
