--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,3 +66,6 @@ jobs:
             VwIDAQAB
             -----END PUBLIC KEY-----
           packager: 'Loxoo Labs <triptixx@loxoolabs.net>'
+      - name: verif
+        run: |
+          ls -al ${{ github.workspace }}/packages
