--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,34 @@ jobs:
             VwIDAQAB
             -----END PUBLIC KEY-----
           packager: 'Loxoo Labs <triptixx@loxoolabs.net>'
-      - name: verif
-        run: |
-          ls -al ${{ github.workspace }}/packages/glibc-apk/x86_64
+      - name: upload artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: glibc-bin-${{ env.GLIBC_VER }}
+          path: ${{ github.workspace }}/packages/glibc-apk/x86_64
+
+
+
+
+
+
+
+
+
+
+
+
+
+      # - name: verif
+      #   run: |
+      #     ls -al ${{ github.workspace }}/packages/glibc-apk/x86_64
+      # - name: Upload Release Asset
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     set -x
+      #     assets=()
+      #     for asset in ${{ github.workspace }}/packages/glibc-apk/x86_64/*.{apk,tar.gz}; do
+      #       assets+=("-a" "$asset")
+      #     done
+      #     hub release create "${assets[@]}" -m "Release ${{ env.GLIBC_VER }}" "${{ env.GLIBC_VER }}"
