--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,16 @@ on:
 env:
   GLIBC_VER: '2.31'
   PREFIX_DIR: '/usr/glibc-compat'
+  PUBLIC_KEY: |-
+    -----BEGIN PUBLIC KEY-----
+      MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAtoHpLA+EKg0M8z8Uh/kq
+      o9mzMiuh6rYhmEKFbjSWYoU5LFrzKZOlzpC0nT04qyuK6/00+SjQ1xXa648+gZPw
+      aVwxwavf59yVycKeDidfzB8pvEbYoASDmZT8Deh+HvqmIh/EGWZnZjTemQMf9qA5
+      unj3n3AXat3yDBg6XBnBd4BxO8iRY0614zcjjbDBbTEm7ywGj6j2Y+Wy7kbIoPK5
+      xZkB/jGsc2iY6zGQPsHSWBgYGn2QVghEiDnyy60+etWtUlzpP+iqi2yhxbPQNW1i
+      KdxONz5d3Rt6MkD+ttpx1ei5X+jEacMMWLyEnpCi0XCoJCtv4WQEJ67iKjHOPD5n
+      VwIDAQAB
+      -----END PUBLIC KEY-----
 
 jobs:
   glibc-build:
@@ -55,22 +65,29 @@ jobs:
         uses: triptixx/action-alpine-abuild@master
         with:
           private_key: ${{ secrets.private_key }}
-          public_key: |-
-            -----BEGIN PUBLIC KEY-----
-            MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAtoHpLA+EKg0M8z8Uh/kq
-            o9mzMiuh6rYhmEKFbjSWYoU5LFrzKZOlzpC0nT04qyuK6/00+SjQ1xXa648+gZPw
-            aVwxwavf59yVycKeDidfzB8pvEbYoASDmZT8Deh+HvqmIh/EGWZnZjTemQMf9qA5
-            unj3n3AXat3yDBg6XBnBd4BxO8iRY0614zcjjbDBbTEm7ywGj6j2Y+Wy7kbIoPK5
-            xZkB/jGsc2iY6zGQPsHSWBgYGn2QVghEiDnyy60+etWtUlzpP+iqi2yhxbPQNW1i
-            KdxONz5d3Rt6MkD+ttpx1ei5X+jEacMMWLyEnpCi0XCoJCtv4WQEJ67iKjHOPD5n
-            VwIDAQAB
-            -----END PUBLIC KEY-----
+          public_key: ${{ env.PUBLIC_KEY }}
           packager: 'Loxoo Labs <triptixx@loxoolabs.net>'
       - name: upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: glibc-bin-${{ env.GLIBC_VER }}
+          name: glibc-apk-${{ env.GLIBC_VER }}
           path: ${{ github.workspace }}/packages/glibc-apk/x86_64
+  apk-test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: sh
+    container:
+      image: alpine:latest
+    steps:
+      - name: download artifact
+        uses: actions/download-artifact@master
+        with:
+          name: glibc-apk-${{ env.GLIBC_VER }}
+      - name: Test package installation
+        run: |
+          echo "${{ env.PUBLIC_KEY }}" > /etc/apk/keys/abuild.rsa.pub
+          apk add --no-cache ${{ github.workspace }}/*.apk
 
 
 
