--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Test package installation
         run: |
           echo "${{ env.PUBLIC_KEY }}" > /etc/apk/keys/abuild.rsa.pub
-          apk add --no-cache ${{ github.workspace }}/*.apk
+          apk add --no-cache *.apk
 
 
 
