--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,8 +105,7 @@ jobs:
           for asset in ./*.{apk,tar.gz}; do
             assets+=("-a" "$asset")
           done
-          if [ $(hub release show "${{ env.GLIBC_VER }}" >/dev/null 2>&1) ]; then
-            hub release delete "${{ env.GLIBC_VER }}"
+          if [ $(hub release show "v${{ env.GLIBC_VER }}" >/dev/null 2>&1) ]; then
+            hub release delete "v${{ env.GLIBC_VER }}"
           fi
-          hub release delete "${{ env.GLIBC_VER }}"
           hub release create "${assets[@]}" -m "Release v${{ env.GLIBC_VER }}" v"${{ env.GLIBC_VER }}"
